<?xml version="1.0"?>
<package format="2">
  <name>2dto3d</name>
  <version>0.0.0</version>
  <description>3D point clouding using 2D lidar with ROS</description>

  <maintainer email="kkalkkalssamssam@gmail.com">JuneChang Lee</maintainer>
  <maintainer email="tjdtlrwwkd@gmail.com">SeongSik Kim</maintainer>
  <maintainer email="ghduddlrjdi@naver.com">HoYoung Hwang</maintainer>

  <maintainer email="project@soslab.co">SOSLAB Co., Ltd.</maintainer>

  <url type="website">http://soslab.co</url>

  <license>BSD</license>

  <author email="kkalkkalssamssam@gmail.com">JuneChang Lee</author>
  <author email="tjdtlrwwkd@gmail.com">SeongSik Kim</author>
  <author email="ghduddlrjdi@naver.com">HoYoung Hwang</author>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
